fixed display of resolution error on mobile phones and small viewports in landscape position

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,6 @@ body {
     rgba(123, 63, 251, 1) 0%,
     rgba(67, 26, 83, 1) 100%
   );
-  overflow: hidden;
 }
 
 h1 {
@@ -148,6 +147,7 @@ h1 {
 }
 
 @media screen and (max-width: 780px) {
+  body,
   .game {
     overflow: hidden;
   }
